<resources>
    <string name="app_name">Admin</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="no_tai_khoan">Chưa có tài khoản?</string>
    <string name="dang_ki_table">Đăng ký</string>
    <string name="quen_mk_dn">Quên mật khẩu?</string>
    <string name="dang_nhap_pass">Xác nhận</string>
    <string name="dang_ki">Đăng ký</string>
    <string name="dang_ki_pass">Xác nhận</string>
    <string name="sdt_dk">Số điện thoại</string>
    <string name="re_pass_dk">Nhập lại mật khẩu</string>
    <string name="pass_dk">Mật khẩu</string>
    <string name="email_dk">Email</string>
    <string name="dk_ten">Tên</string>
    <string name="quen_mk">Quên mật khẩu</string>
    <string name="quen_email">Nhập Email</string>
    <string name="lay_lai_mk">LẤY MẬT KHẨU</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="sp_moi">Sản phẩm mới nhất</string>
    <string name="sp_tot_nhat">Sản phẩm tốt nhất</string>
    <string name="item_sp">Quần Áo</string>
    <string name="tim_sp">Tìm kiếm sản phẩm</string>
    <string name="nhap_sp_tim">Nhập sản phẩm cần tìm</string>
    <string name="item_ten_sp">Tên sản phẩm</string>
    <string name="item_gia_sp">Giá: 100.000 đ</string>
    <string name="item_mo_to_sp">Mô tả:</string>
    <string name="ao">Quần Áo</string>
    <string name="phu_kien">Phụ Kiện</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="ten_san_pham">Tên sản phẩm</string>
    <string name="gia">Giá</string>
    <string name="them_san_pham_vao_gio">Thêm vào giỏ hàng</string>
    <string name="mo_ta_chi_tiet_san_pham">Mô tả chi tiết sản phẩm</string>
    <string name="gio_trong">Giỏ hàng trống</string>
    <string name="gio_hang">Giỏ hàng</string>
    <string name="tong_gio_hang">Tổng tiền:</string>
    <string name="gia_gio_hang">1.000.000 đ</string>
    <string name="mua_hang">MUA HÀNG</string>
    <string name="item_ten_gio_hang">Tên sản phẩm</string>
    <string name="item_gia">10.000.000</string>
    <string name="item_tong">10.000.000</string>
    <string name="xem_don_hang">Đơn hàng</string>
    <string name="item_don_hang">ID Đơn hàng</string>
    <string name="item_tinh_trang">Tình trạng đơn</string>
    <string name="item_ten_chitiet">Tên sản phẩm</string>
    <string name="item_sl_chi_tiet">Số lượng: 20</string>
    <string name="item_gia_chi_tiet">Giá: 1.000.000</string>
    <string name="quan_li">Quản Lý Sản Phẩm</string>
    <string name="them_sp">Thêm mới sản phẩm</string>
    <string name="them_ten_sp">Tên sản phẩm</string>
    <string name="them_gia_sp">Giá sản phẩm</string>
    <string name="them_image">Chọn hình ảnh sản phẩm</string>
    <string name="mo_ta_sp">Mô tả sản phẩm</string>
    <string name="them">Thêm sản phẩm</string>
    <string name="xac_nhan_dh">Xác nhận</string>
    <string name="trang_thai_don_hang">Trạng thái đơn:</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="dat_hang">ĐẶT HÀNG</string>
    <string name="nhap_dia_chi_thanh_toan">Nhập địa chỉ giao hàng</string>
    <string name="gmail_thanh_toan">admin@gmail.com</string>
    <string name="thanh_toan_sdt">0123456789</string>
    <string name="thanh_toan_gia">1.000.000</string>
    <string name="tvUsername">Admin</string>
    <string name="tvEmail">admin@gmail.com</string>
    <string name="thong_ke">Thống kê</string>
    <string name="thong_tin">Thông tin liên hệ</string>
    <string name="diachi">562 - Nguyễn Trãi, Q.Thanh Xuân, Hà Nội</string>
</resources>