<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/g_card_background"
    android:layout_width="match_parent"
    android:layout_height="120dp">
    <LinearLayout
        android:layout_margin="5dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/itemdt_image"
            android:layout_weight="3"
            android:src="@drawable/ic_person"
            android:layout_width="0dp"
            android:layout_height="100dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/itemdt_ten"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/item_ten_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/itemdt_gia"
                android:textSize="16sp"
                android:text="@string/item_gia_sp"
                android:textColor="@android:color/holo_red_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/itemdt_mota"
                android:textSize="14sp"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/item_mo_to_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>