<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/item_imgchitiet"
                android:src="@drawable/ic_person"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <LinearLayout
                android:padding="2dp"
                android:layout_toEndOf="@id/item_imgchitiet"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/MediumTextViewThin"
                    android:id="@+id/item_tenspchitiet"
                    android:text="@string/item_ten_chitiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/item_soluongchitiet"
                    android:text="@string/item_sl_chi_tiet"
                    android:textSize="15sp"
                    style="@style/SmallTextViewThin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/item_giachitiet"
                    style="@style/SmallTextViewThin"
                    android:text="@string/item_gia_chi_tiet"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>