<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgSpDonHang"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/tvDhTenSp"
                style="@style/MediumTextViewThin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/item_ten_chitiet" />

            <TextView
                android:id="@+id/tvDhSoluong"
                style="@style/SmallTextViewThin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_sl_chi_tiet"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvDhGia"
                style="@style/SmallTextViewThin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_gia_chi_tiet"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/title"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDhDiaChi"
                style="@style/MediumTextViewThin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hà Nội" />

            <TextView
                android:id="@+id/tvDhSdt"
                style="@style/SmallTextViewThin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SĐT: 0123456789"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>